[gd_scene load_steps=31 format=3 uid="uid://cvldogolyh14f"]

[ext_resource type="Script" path="res://microjogos/2022S1/baleia/cenas/baleia.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b3ddkpemxekph" path="res://microjogos/2022S1/baleia/recursos/blue-whale-FINAL.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dpyb1tu0hjtqc" path="res://microjogos/2022S1/baleia/recursos/dirtCenter.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cemuvnlendoct" path="res://microjogos/2022S1/baleia/recursos/tiles_spritesheet.png" id="4"]
[ext_resource type="Texture2D" uid="uid://ydhh7dtqupqw" path="res://microjogos/2022S1/baleia/recursos/liquidWater.png" id="5"]
[ext_resource type="Texture2D" uid="uid://cbingfi5rwqgx" path="res://microjogos/2022S1/baleia/recursos/blue-whale-morta.png" id="6"]
[ext_resource type="AudioStream" uid="uid://caf0cvwwv4oad" path="res://microjogos/2022S1/baleia/recursos/674536__nicholasjudy567__water-splash-big-splash-dive-into-water-person-or-animal.wav" id="6_17xm6"]
[ext_resource type="Texture2D" uid="uid://dknehm2ucrw66" path="res://microjogos/2022S1/baleia/recursos/Ocean.png" id="7"]
[ext_resource type="AudioStream" uid="uid://77bxwie5m2j3" path="res://microjogos/2022S1/baleia/recursos/540076__magnuswaker__meat-slap-2.wav" id="9"]
[ext_resource type="Script" path="res://microjogos/2022S1/baleia/cenas/baleiaGame.gd" id="11"]

[sub_resource type="RectangleShape2D" id="9"]
size = Vector2(73, 15.5)

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource("2")
region = Rect2(0, 0, 71, 64)

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource("2")
region = Rect2(71, 0, 71, 64)

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource("2")
region = Rect2(142, 0, 71, 64)

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource("2")
region = Rect2(213, 0, 71, 64)

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource("2")
region = Rect2(0, 0, 71, 64)

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource("2")
region = Rect2(71, 0, 71, 64)

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource("2")
region = Rect2(142, 0, 71, 64)

[sub_resource type="AtlasTexture" id="17"]
atlas = ExtResource("2")
region = Rect2(213, 0, 71, 64)

[sub_resource type="AtlasTexture" id="18"]
atlas = ExtResource("2")
region = Rect2(284, 0, 71, 64)

[sub_resource type="SpriteFrames" id="19"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("10")
}, {
"duration": 1.0,
"texture": SubResource("11")
}, {
"duration": 1.0,
"texture": SubResource("12")
}, {
"duration": 1.0,
"texture": SubResource("13")
}, {
"duration": 1.0,
"texture": SubResource("14")
}, {
"duration": 1.0,
"texture": SubResource("15")
}, {
"duration": 1.0,
"texture": SubResource("16")
}, {
"duration": 1.0,
"texture": SubResource("17")
}, {
"duration": 1.0,
"texture": SubResource("18")
}],
"loop": true,
"name": &"baleia",
"speed": 5.0
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0yrhm"]
texture = ExtResource("3")
margins = Vector2i(1, 0)
texture_region_size = Vector2i(69, 69)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-34.5, -34.5, 34.5, -34.5, 34.5, 34.5, -34.5, 34.5)
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/1/physics_layer_0/angular_velocity = 0.0
0:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(34.5, -34.5, -34.5, -34.5, -34.5, 34.5, 34.5, 34.5)
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/2/physics_layer_0/angular_velocity = 0.0
0:0/2/physics_layer_0/polygon_0/points = PackedVector2Array(-34.5, 34.5, 34.5, 34.5, 34.5, -34.5, -34.5, -34.5)
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/3/physics_layer_0/angular_velocity = 0.0
0:0/3/physics_layer_0/polygon_0/points = PackedVector2Array(34.5, 34.5, -34.5, 34.5, -34.5, -34.5, 34.5, -34.5)
0:0/4 = 4
0:0/4/transpose = true
0:0/4/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/4/physics_layer_0/angular_velocity = 0.0
0:0/4/physics_layer_0/polygon_0/points = PackedVector2Array(-34.5, -34.5, 34.5, -34.5, 34.5, 34.5, -34.5, 34.5)
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/5/physics_layer_0/angular_velocity = 0.0
0:0/5/physics_layer_0/polygon_0/points = PackedVector2Array(34.5, -34.5, -34.5, -34.5, -34.5, 34.5, 34.5, 34.5)
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/6/physics_layer_0/angular_velocity = 0.0
0:0/6/physics_layer_0/polygon_0/points = PackedVector2Array(-34.5, 34.5, 34.5, 34.5, 34.5, -34.5, -34.5, -34.5)
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/7/physics_layer_0/angular_velocity = 0.0
0:0/7/physics_layer_0/polygon_0/points = PackedVector2Array(34.5, 34.5, -34.5, 34.5, -34.5, -34.5, 34.5, -34.5)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_j6dkv"]
texture = ExtResource("4")
margins = Vector2i(504, 576)
texture_region_size = Vector2i(70, 70)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(35, 35, -35, 35, -35, -35, 35, -35)
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/1/physics_layer_0/angular_velocity = 0.0
0:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(-35, 35, 35, 35, 35, -35, -35, -35)
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/2/physics_layer_0/angular_velocity = 0.0
0:0/2/physics_layer_0/polygon_0/points = PackedVector2Array(35, -35, -35, -35, -35, 35, 35, 35)
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/3/physics_layer_0/angular_velocity = 0.0
0:0/3/physics_layer_0/polygon_0/points = PackedVector2Array(-35, -35, 35, -35, 35, 35, -35, 35)
0:0/4 = 4
0:0/4/transpose = true
0:0/4/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/4/physics_layer_0/angular_velocity = 0.0
0:0/4/physics_layer_0/polygon_0/points = PackedVector2Array(35, 35, -35, 35, -35, -35, 35, -35)
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/5/physics_layer_0/angular_velocity = 0.0
0:0/5/physics_layer_0/polygon_0/points = PackedVector2Array(-35, 35, 35, 35, 35, -35, -35, -35)
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/6/physics_layer_0/angular_velocity = 0.0
0:0/6/physics_layer_0/polygon_0/points = PackedVector2Array(35, -35, -35, -35, -35, 35, 35, 35)
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/7/physics_layer_0/angular_velocity = 0.0
0:0/7/physics_layer_0/polygon_0/points = PackedVector2Array(-35, -35, 35, -35, 35, 35, -35, 35)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rq4yt"]
texture = ExtResource("4")
margins = Vector2i(576, 864)
texture_region_size = Vector2i(70, 70)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(35, 35, -35, 35, -35, -35, 35, -35)
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/1/physics_layer_0/angular_velocity = 0.0
0:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(-35, 35, 35, 35, 35, -35, -35, -35)
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/2/physics_layer_0/angular_velocity = 0.0
0:0/2/physics_layer_0/polygon_0/points = PackedVector2Array(35, -35, -35, -35, -35, 35, 35, 35)
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/3/physics_layer_0/angular_velocity = 0.0
0:0/3/physics_layer_0/polygon_0/points = PackedVector2Array(-35, -35, 35, -35, 35, 35, -35, 35)
0:0/4 = 4
0:0/4/transpose = true
0:0/4/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/4/physics_layer_0/angular_velocity = 0.0
0:0/4/physics_layer_0/polygon_0/points = PackedVector2Array(35, 35, -35, 35, -35, -35, 35, -35)
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/5/physics_layer_0/angular_velocity = 0.0
0:0/5/physics_layer_0/polygon_0/points = PackedVector2Array(-35, 35, 35, 35, 35, -35, -35, -35)
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/6/physics_layer_0/angular_velocity = 0.0
0:0/6/physics_layer_0/polygon_0/points = PackedVector2Array(35, -35, -35, -35, -35, 35, 35, 35)
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/7/physics_layer_0/angular_velocity = 0.0
0:0/7/physics_layer_0/polygon_0/points = PackedVector2Array(-35, -35, 35, -35, 35, 35, -35, 35)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n6cqp"]
texture = ExtResource("5")
texture_region_size = Vector2i(70, 70)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/1/physics_layer_0/angular_velocity = 0.0
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/2/physics_layer_0/angular_velocity = 0.0
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/3/physics_layer_0/angular_velocity = 0.0
0:0/4 = 4
0:0/4/transpose = true
0:0/4/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/4/physics_layer_0/angular_velocity = 0.0
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/5/physics_layer_0/angular_velocity = 0.0
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/6/physics_layer_0/angular_velocity = 0.0
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/7/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kbbyk"]
texture = ExtResource("4")
margins = Vector2i(432, 576)
texture_region_size = Vector2i(70, 70)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/1/physics_layer_0/angular_velocity = 0.0
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/2/physics_layer_0/angular_velocity = 0.0
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/3/physics_layer_0/angular_velocity = 0.0
0:0/4 = 4
0:0/4/transpose = true
0:0/4/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/4/physics_layer_0/angular_velocity = 0.0
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/5/physics_layer_0/angular_velocity = 0.0
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/6/physics_layer_0/angular_velocity = 0.0
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/7/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="2"]
tile_size = Vector2i(70, 70)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_0yrhm")
sources/1 = SubResource("TileSetAtlasSource_j6dkv")
sources/2 = SubResource("TileSetAtlasSource_rq4yt")
sources/3 = SubResource("TileSetAtlasSource_n6cqp")
sources/4 = SubResource("TileSetAtlasSource_kbbyk")

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(101.75, 4.375)

[sub_resource type="RectangleShape2D" id="7"]
size = Vector2(240.5, 10)

[sub_resource type="RectangleShape2D" id="8"]
size = Vector2(627, 10)

[node name="baleiaGame" type="Node2D"]
script = ExtResource("11")

[node name="baleia" type="CharacterBody2D" parent="."]
position = Vector2(0, -800)
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="baleia"]
position = Vector2(1, -121)
shape = SubResource("9")

[node name="baleia_animacao" type="AnimatedSprite2D" parent="baleia"]
position = Vector2(-2, -112)
scale = Vector2(2.4375, 2.4375)
sprite_frames = SubResource("19")
animation = &"baleia"
frame = 7
frame_progress = 0.859305
speed_scale = 1.5

[node name="baleia_morta" type="Sprite2D" parent="baleia"]
visible = false
position = Vector2(-1, -117)
scale = Vector2(2.49286, 2.49286)
texture = ExtResource("6")

[node name="baleiaHit" type="AudioStreamPlayer" parent="baleia"]
stream = ExtResource("9")

[node name="AguaSound" type="AudioStreamPlayer" parent="baleia"]
stream = ExtResource("6_17xm6")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -300)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("2")
format = 2
layer_0/tile_data = PackedInt32Array(131033, 4, 0, 131034, 4, 0, 131035, 4, 0, 131036, 4, 0, 131037, 4, 0, 131038, 4, 0, 131039, 4, 0, 131040, 4, 0, 131041, 4, 0, 131042, 4, 0, 131043, 4, 0, 131044, 4, 0, 131045, 4, 0, 131046, 4, 0, 131047, 4, 0, 131048, 4, 0, 131049, 4, 0, 131050, 4, 0, 131051, 4, 0, 131052, 4, 0, 131053, 4, 0, 131054, 4, 0, 131055, 4, 0, 131056, 4, 0, 131057, 4, 0, 131058, 4, 0, 131059, 4, 0, 131060, 4, 0, 131061, 4, 0, 131062, 4, 0, 131063, 4, 0, 131064, 4, 0, 131065, 1, 0, 131066, 1, 0, 131067, 1, 0, 131068, 4, 0, 131069, 4, 0, 131070, 4, 0, 131071, 4, 0, 65536, 4, 0, 65537, 4, 0, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 65544, 4, 0, 65545, 4, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 65549, 4, 0, 65550, 4, 0, 65551, 4, 0, 65552, 4, 0, 65553, 4, 0, 65554, 4, 0, 65555, 4, 0, 65556, 4, 0, 65557, 4, 0, 65558, 4, 0, 65559, 4, 0, 65560, 4, 0, 65561, 4, 0, 65562, 4, 0, 65563, 4, 0, 65564, 4, 0, 65565, 4, 0, 196569, 3, 0, 196570, 3, 0, 196571, 3, 0, 196572, 3, 0, 196573, 3, 0, 196574, 3, 0, 196575, 3, 0, 196576, 3, 0, 196577, 3, 0, 196578, 3, 0, 196579, 3, 0, 196580, 3, 0, 196581, 3, 0, 196582, 3, 0, 196583, 3, 0, 196584, 3, 0, 196585, 3, 0, 196586, 3, 0, 196587, 3, 0, 196588, 3, 0, 196589, 3, 0, 196590, 3, 0, 196591, 3, 0, 196592, 3, 0, 196593, 3, 0, 196594, 3, 0, 196595, 3, 0, 196596, 3, 0, 196597, 3, 0, 196598, 3, 0, 196599, 3, 0, 196600, 3, 0, 196601, 2, 0, 196602, 2, 0, 196603, 2, 0, 196604, 3, 0, 196605, 3, 0, 196606, 3, 0, 196607, 3, 0, 131072, 3, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 3, 0, 131088, 3, 0, 131089, 3, 0, 131090, 3, 0, 131091, 3, 0, 131092, 3, 0, 131093, 3, 0, 131094, 3, 0, 131095, 3, 0, 131096, 3, 0, 131097, 3, 0, 131098, 3, 0, 131099, 3, 0, 131100, 3, 0, 131101, 3, 0, 262105, 3, 0, 262106, 3, 0, 262107, 3, 0, 262108, 3, 0, 262109, 3, 0, 262110, 3, 0, 262111, 3, 0, 262112, 3, 0, 262113, 3, 0, 262114, 3, 0, 262115, 3, 0, 262116, 3, 0, 262117, 3, 0, 262118, 3, 0, 262119, 3, 0, 262120, 3, 0, 262121, 3, 0, 262122, 3, 0, 262123, 3, 0, 262124, 3, 0, 262125, 3, 0, 262126, 3, 0, 262127, 3, 0, 262128, 3, 0, 262129, 3, 0, 262130, 3, 0, 262131, 3, 0, 262132, 3, 0, 262133, 3, 0, 262134, 3, 0, 262135, 3, 0, 262136, 3, 0, 262137, 2, 0, 262138, 2, 0, 262139, 2, 0, 262140, 3, 0, 262141, 3, 0, 262142, 3, 0, 262143, 3, 0, 196608, 3, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0, 196612, 3, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 3, 0, 196625, 3, 0, 196626, 3, 0, 196627, 3, 0, 196628, 3, 0, 196629, 3, 0, 196630, 3, 0, 196631, 3, 0, 196632, 3, 0, 196633, 3, 0, 196634, 3, 0, 196635, 3, 0, 196636, 3, 0, 196637, 3, 0)

[node name="Terra" type="Area2D" parent="TileMap"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/Terra"]
position = Vector2(-384.75, 65.375)
shape = SubResource("6")

[node name="agua" type="Area2D" parent="TileMap"]

[node name="agua esq" type="CollisionShape2D" parent="TileMap/agua"]
position = Vector2(-732.5, 91)
shape = SubResource("7")

[node name="agua dir" type="CollisionShape2D" parent="TileMap/agua"]
position = Vector2(350, 91)
shape = SubResource("8")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(3, -18)
scale = Vector2(4.0875, 7.59491)
texture = ExtResource("7")

[connection signal="body_entered" from="TileMap/Terra" to="baleia" method="_on_Terra_body_entered"]
[connection signal="body_entered" from="TileMap/agua" to="baleia" method="_on_agua_body_entered"]
